Hopefully fixed issue related to title scaling on mobile phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,24 +50,15 @@ body, html {
   .contain {
     text-align: center;
   }
-/*
-  @media only screen and (max-width: 600px) {
-    .logo {      
-      width: 95px;
-    }
 
+  @media only screen and (max-width: 477px) {
     .name {
-      font-size: 50px;
+      font-size: 75px;
       margin-top: 0.25px;
     }
-    .tlt {
-      font-size: 13px;
+  
+  @media only screen and (max-width: 360px) {
+    .name {
+      font-size: 60px;
+      margin-top: 0.25px;
     }
-    .texts {
-      font-size: 13px;
-    }
-    .soon {
-      font-size: 20px;
-    }
-  }
-  */
